--- a/apps/static_ahu/prj.conf
+++ b/apps/static_ahu/prj.conf
@@ -1,6 +1,6 @@
 CONFIG_BT=y
 CONFIG_BT_DEBUG_LOG=y
-CONFIG_BT_DEVICE_NAME="Test beacon"
+CONFIG_BT_DEVICE_NAME="xander's epic ultrasonic node"
 CONFIG_LOG=y
 CONFIG_USB=y
 CONFIG_USB_CDC_ACM=y
