--- a/apps/p3/base/prj.conf
+++ b/apps/p3/base/prj.conf
@@ -2,11 +2,11 @@ CONFIG_BT=y
 CONFIG_BT_BROADCASTER=y
 CONFIG_BT_OBSERVER=y
 #CONFIG_BT_DEBUG_LOG=y
-CONFIG_BT_DEVICE_NAME="xander's base node"
+CONFIG_BT_DEVICE_NAME="AF_DG base"
 
 CONFIG_USB=y
 CONFIG_USB_DEVICE_STACK=y
-CONFIG_USB_DEVICE_PRODUCT="xander's super cool usb acm device"                           
+CONFIG_USB_DEVICE_PRODUCT="AF_DG base node" 
 CONFIG_USB_UART_CONSOLE=y
 
 CONFIG_UART_INTERRUPT_DRIVEN=y
